add_subdirectory(cell)
add_subdirectory(constitutive)
add_subdirectory(constraints)
add_subdirectory(dofs)
add_subdirectory(dofSubMatrixSolvers)
add_subdirectory(elements)
add_subdirectory(groups)
add_subdirectory(integrationtypes)
add_subdirectory(interpolation)
add_subdirectory(mesh)
add_subdirectory(nodes)
add_subdirectory(sections)
add_subdirectory(tools)
add_subdirectory(timeIntegration)
add_subdirectory(feti)
add_subdirectory(iga)
