add_subdirectory(cell)
add_subdirectory(constitutive)
add_subdirectory(constraintsPde)
add_subdirectory(dofs)
add_subdirectory(elements)
add_subdirectory(integrands)
add_subdirectory(integrationtypes)
add_subdirectory(interpolation)
add_subdirectory(mesh)
add_subdirectory(nodes)
add_subdirectory(tools)
add_subdirectory(timeIntegration)
add_subdirectory(iga)
