if(ENABLE_UNIT_TESTS)
    add_executable(ContinuumElement ContinuumElement.cpp)
    target_link_libraries(ContinuumElement NuToMechanics NuToMath NuToBase)
    if(ENABLE_VISUALIZE)
        target_link_libraries(ContinuumElement NuToVisualize)
    endif()
    add_test(c::unit::ContinuumElement ${CMAKE_CURRENT_BUILD_DIR}/ContinuumElement)
endif()

if(ENABLE_UNIT_TESTS)
    add_executable(HeatConduction HeatConduction.cpp)
    target_link_libraries(HeatConduction NuToMechanics NuToMath NuToBase)
    if(ENABLE_VISUALIZE)
        target_link_libraries(HeatConduction NuToVisualize)
    endif()
    add_test(c::unit::HeatConduction ${CMAKE_CURRENT_BUILD_DIR}/HeatConduction)
endif()

if(ENABLE_UNIT_TESTS)
    add_executable(ConstitutiveIO ConstitutiveIO.cpp)
    target_link_libraries(ConstitutiveIO NuToMechanics NuToMath NuToBase)
    if(ENABLE_VISUALIZE)
        target_link_libraries(ConstitutiveIO NuToVisualize)
    endif()
    add_test(c::unit::ConstitutiveIO ${CMAKE_CURRENT_BUILD_DIR}/ConstitutiveIO)
endif()
