if(ENABLE_UNIT_TESTS)
    foreach(test ContinuumElement HeatConduction ConstitutiveIO AdditiveInput AdditiveOutput Interpolation)
        add_executable(${test} ${test}.cpp)
        target_link_libraries(${test} NuToMechanics NuToMath NuToBase)
        if(ENABLE_VISUALIZE)
            target_link_libraries(${test} NuToVisualize)
        endif()
        add_test(c::unit::${test} ${CMAKE_CURRENT_BUILD_DIR}/${test})
    endforeach()
endif()
